--- a/index.html
+++ b/index.html
@@ -10,17 +10,27 @@
 
 <body>
     <h1>Portfolio</h1>
-    <h2>Projects</h2>
-    <div>
-        <li><a href="https://timnilsson04.github.io/te4-pizzeria/#about">Pizza restaurant website</a></li>
-        <li><a href="https://cv-te4-intro.netlify.app/">Interactive CV</a></li>
-    </div>
+    <div class="grid">
+        <div>
+            <h2>Projects</h2>
+            <div>
+                <li><a href="https://timnilsson04.github.io/te4-pizzeria/">Pizza restaurant website</a></li>
+                <img src="./img/pizza.png" alt="">
+                <li><a href="https://cv-te4-intro.netlify.app/">Interactive CV</a></li>
+                <img src="./img/interactiveCV.png" alt="">
+            </div>
+        </div>
 
-    <h2>My Finals project</h2>
-    <div>
-        <p>Open Finals project <a href="/Gymnasiearbete-2022-2023-Tim_Nilsson.pdf">pdf</a>.</p>
-        <li><a href="https://flipflops.timpan.ninja/">Flipflops website</a></li>
-        <li><a href="https://sneakers.timpan.ninja/">Sneakers website</a></li>
+        <div>
+            <h2>My Finals project</h2>
+            <div>
+                <li><a href="https://flipflops.timpan.ninja/">Flipflops website</a></li>
+                <img src="./img/flipflops.png" alt="">
+                <li><a href="https://sneakers.timpan.ninja/">Sneakers website</a></li>
+                <img src="./img/sneakers.png" alt="">
+                <p>Open Finals project <a href="./Gymnasiearbete-2022-2023-Tim_Nilsson.pdf">pdf</a>.</p>
+            </div>
+        </div>
     </div>
 </body>
 
