--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="My portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
     <link rel="stylesheet" href="style.css">
@@ -14,21 +15,25 @@
         <div>
             <h2>Projects</h2>
             <div>
-                <li><a href="https://timnilsson04.github.io/te4-pizzeria/">Pizza restaurant website</a></li>
-                <img src="./img/pizza.png" alt="">
-                <li><a href="https://cv-te4-intro.netlify.app/">Interactive CV</a></li>
-                <img src="./img/interactiveCV.png" alt="">
+                <ul>
+                    <li><a href="https://timnilsson04.github.io/te4-pizzeria/">Pizza restaurant website</a></li>
+                    <img src="./img/pizza.png" alt="">
+                    <li><a href="https://cv-te4-intro.netlify.app/">Interactive CV</a></li>
+                    <img src="./img/interactiveCV.png" alt="">
+                </ul>
             </div>
         </div>
 
         <div>
             <h2>My Finals project</h2>
             <div>
-                <li><a href="https://flipflops.timpan.ninja/">Flipflops website</a></li>
-                <img src="./img/flipflops.png" alt="">
-                <li><a href="https://sneakers.timpan.ninja/">Sneakers website</a></li>
-                <img src="./img/sneakers.png" alt="">
-                <p>Open Finals project <a href="./Gymnasiearbete-2022-2023-Tim_Nilsson.pdf">pdf</a>.</p>
+                <ul>
+                    <li><a href="https://flipflops.timpan.ninja/">Flipflops website</a></li>
+                    <img src="./img/flipflops.png" alt="">
+                    <li><a href="https://sneakers.timpan.ninja/">Sneakers website</a></li>
+                    <img src="./img/sneakers.png" alt="">
+                    <p>Open Finals project <a href="./Gymnasiearbete-2022-2023-Tim_Nilsson.pdf">pdf</a>.</p>
+                </ul>
             </div>
         </div>
     </div>
