--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <div>
                 <ul>
                     <li><a href="https://timnilsson04.github.io/te4-pizzeria/">Pizza restaurant website</a></li>
-                    <img src="./img/pizza.png" alt="">
+                    <li><img src="./img/pizza.png" alt=""></li>
                     <li><a href="https://cv-te4-intro.netlify.app/">Interactive CV</a></li>
-                    <img src="./img/interactiveCV.png" alt="">
+                    <li><img src="./img/interactiveCV.png" alt=""></li>
                 </ul>
             </div>
         </div>
@@ -29,10 +29,12 @@
             <div>
                 <ul>
                     <li><a href="https://flipflops.timpan.ninja/">Flipflops website</a></li>
-                    <img src="./img/flipflops.png" alt="">
+                    <li><img src="./img/flipflops.png" alt=""></li>
                     <li><a href="https://sneakers.timpan.ninja/">Sneakers website</a></li>
-                    <img src="./img/sneakers.png" alt="">
-                    <p>Open Finals project <a href="./Gymnasiearbete-2022-2023-Tim_Nilsson.pdf">pdf</a>.</p>
+                    <li><img src="./img/sneakers.png" alt=""></li>
+                    <li>
+                        <p>Open Finals project <a href="./Gymnasiearbete-2022-2023-Tim_Nilsson.pdf">pdf</a>.</p>
+                    </li>
                 </ul>
             </div>
         </div>
