--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                     <li><img src="./img/pizza.png" alt=""></li>
                     <li><a href="https://cv-te4-intro.netlify.app/">Interactive CV</a></li>
                     <li><img src="./img/interactiveCV.png" alt=""></li>
+                    <li><a href="https://darth-vader-the-sky-awakens.netlify.app/">Weather Forecast</a></li>
+                    <li><img src="" alt=""></li>
                 </ul>
             </div>
         </div>
