--- a/index.html
+++ b/index.html
@@ -15,29 +15,46 @@
         <div>
             <h2>Projects</h2>
             <div>
-                <ul>
-                    <li><a href="https://timnilsson04.github.io/te4-pizzeria/">Pizza restaurant website</a></li>
-                    <li><img src="./img/pizza.png" alt=""></li>
-                    <li><a href="https://cv-te4-intro.netlify.app/">Interactive CV</a></li>
-                    <li><img src="./img/interactiveCV.png" alt=""></li>
-                    <li><a href="https://darth-vader-the-sky-awakens.netlify.app/">Weather Forecast</a></li>
-                    <li><img src="" alt=""></li>
-                </ul>
+                <div class="grid-one-auto">
+                    <a href="https://timnilsson04.github.io/te4-pizzeria/">Pizza restaurant website</a>
+                    <img src="./img/pizza.png" alt="">
+                    <a href="https://cv-te4-intro.netlify.app/">Interactive CV</a>
+                    <img src="./img/interactiveCV.png" alt="">
+                    <a href="https://darth-vader-the-sky-awakens.netlify.app/">Weather Forecast</a>
+                    <img src="" alt="">
+                </div>
             </div>
         </div>
 
         <div>
             <h2>My Finals project</h2>
             <div>
-                <ul>
-                    <li><a href="https://flipflops.timpan.ninja/">Flipflops website</a></li>
-                    <li><img src="./img/flipflops.png" alt=""></li>
-                    <li><a href="https://sneakers.timpan.ninja/">Sneakers website</a></li>
-                    <li><img src="./img/sneakers.png" alt=""></li>
-                    <li>
-                        <p>Open Finals project <a href="./Gymnasiearbete-2022-2023-Tim_Nilsson.pdf">pdf</a>.</p>
-                    </li>
-                </ul>
+                <div class="grid-one-auto">
+                    <a href="https://flipflops.timpan.ninja/">Flipflops website</a>
+                    <img src="./img/flipflops.png" alt="">
+                    <a href="https://sneakers.timpan.ninja/">Sneakers website</a>
+                    <img src="./img/sneakers.png" alt="">
+
+                    <p>Open Finals project <a href="./Gymnasiearbete-2022-2023-Tim_Nilsson.pdf">pdf</a>.</p>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <div>
+        <h2>Webb-shop project</h2>
+        <div>
+            <div class="grid-one-auto">
+                <a href="https://github.com/TimNilsson04/webb-shop-react">Link to github page with front end
+                    code</a>
+
+                <a href="https://github.com/TimNilsson04/products">Link to github page with back end code</a>
+            </div>
+            <div class="webb-grid">
+                <img class="webb-image" src="./img/product.png" alt="">
+                <img class="webb-image" src="./img/Webb-Shop - localhost.png" alt="">
+                <img class="webb-image" src="./img/Cart.png" alt="">
             </div>
         </div>
     </div>
