Add weather forecast and land puzzle images and links

--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
                     <img src="./img/pizza.png" alt="">
                     <a href="https://cv-te4-intro.netlify.app/">Interactive CV</a>
                     <img src="./img/interactiveCV.png" alt="">
-                    <a href="https://darth-vader-the-sky-awakens.netlify.app/">Weather Forecast</a>
-                    <img src="" alt="">
                 </div>
             </div>
         </div>
@@ -34,13 +32,19 @@
                     <img src="./img/flipflops.png" alt="">
                     <a href="https://sneakers.timpan.ninja/">Sneakers website</a>
                     <img src="./img/sneakers.png" alt="">
-
                     <p>Open Finals project <a href="./Gymnasiearbete-2022-2023-Tim_Nilsson.pdf">pdf</a>.</p>
-
                 </div>
             </div>
         </div>
-
+    </div>
+    <div>
+        <h2>Projects</h2>
+        <div>
+            <div class="grid-one-auto">
+                <a href="https://darth-vader-the-sky-awakens.netlify.app/">Weather Forecast</a>
+                <img src="./img/weather-forecast.png" alt="">
+            </div>
+        </div>
     </div>
     <div>
         <h2>Webb-shop project</h2>
@@ -55,6 +59,16 @@
                 <img class="webb-image" src="./img/product.png" alt="">
                 <img class="webb-image" src="./img/Webb-Shop - localhost.png" alt="">
                 <img class="webb-image" src="./img/Cart.png" alt="">
+            </div>
+        </div>
+    </div>
+    <div>
+        <h2>Land Puzzle</h2>
+        <div>
+            <div class="grid-one-auto">
+                <a href="https://land-puzzle.netlify.app/">Land Puzzle Netlify</a>
+                <a href="http://jupiter.umea-ntig.se:6901/">Land Puzzle Database Version</a>
+                <img src="./img/land-puzzle.png" alt="">
             </div>
         </div>
     </div>
