style: Add smooth scrolling behavior to HTML element

--- a/index.html
+++ b/index.html
@@ -25,28 +25,40 @@
     </section>
 
     <header>
-        <div class="container">
-            <h1>My Portfolio</h1>
+        <div class="header-container">
+            <h1 class="logo">My Portfolio</h1>
+            <nav class="nav-menu">
+                <ul>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
-    <section id="projects">
+
+    <section #projects id="projects">
         <div class="container">
             <h2>Projects</h2>
             <div class="project">
                 <div class="project-info">
-                    <h3>Clash of Läns</h3>
-                    <p>Description of Project 1</p>
-                    <a href="#" target="_blank">View Project</a>
+                    <div>
+                        <h3>Clash of Läns</h3>
+                        <p>Description of Project </p>
+                    </div>
+                    <a href="http://respected-nice-cousin.glitch.me/" target="_blank">View Project</a>
                 </div>
                 <div class="project-image">
-                    <img src="project1.jpg" alt="Project 1">
+                    <img src="./img/clashoflans.png" alt="Project 1">
                 </div>
             </div>
             <div class="project">
                 <div class="project-info">
-                    <h3>Land Puzzle</h3>
-                    <p>Description of Project 2</p>
+                    <div>
+                        <h3>Land Puzzle</h3>
+                        <p>Description of Project </p>
+                    </div>
                     <a href="https://land-puzzle.netlify.app/" target="_blank">View Project</a>
                 </div>
                 <div class="project-image">
@@ -55,8 +67,10 @@
             </div>
             <div class="project">
                 <div class="project-info">
-                    <h3>Webb-shop project</h3>
-                    <p>Description of Project 2</p>
+                    <div>
+                        <h3>Webb-shop project</h3>
+                        <p>Description of Project </p>
+                    </div>
                     <a href="https://github.com/TimNilsson04/webb-shop-react" target="_blank">View Project</a>
                 </div>
                 <div class="project-image">
@@ -65,8 +79,10 @@
             </div>
             <div class="project">
                 <div class="project-info">
-                    <h3>Weather Forecast</h3>
-                    <p>Description of Project 2</p>
+                    <div>
+                        <h3>Weather Forecast</h3>
+                        <p>Description of Project </p>
+                    </div>
                     <a href="https://darth-vader-the-sky-awakens.netlify.app/" target="_blank">View Project</a>
                 </div>
                 <div class="project-image">
@@ -76,8 +92,10 @@
             <div class="projects-container">
                 <div class="project">
                     <div class="project-info">
-                        <h3>FlipFlops website</h3>
-                        <p>Description of FlipFlops website</p>
+                        <div>
+                            <h3>FlipFlops website</h3>
+                            <p>Description of FlipFlops website</p>
+                        </div>
                         <a href="https://flipflops.timpan.ninja/" target="_blank">View Project</a>
                     </div>
                     <div class="project-image">
@@ -86,8 +104,10 @@
                 </div>
                 <div class="project">
                     <div class="project-info">
-                        <h3>Sneakers website</h3>
-                        <p>Description of Sneakers website</p>
+                        <div>
+                            <h3>Sneakers website</h3>
+                            <p>Description of Sneakers website</p>
+                        </div>
                         <a href="https://sneakers.timpan.ninja/" target="_blank">View Project</a>
                     </div>
                     <div class="project-image">
@@ -97,8 +117,10 @@
             </div>
             <div class="project">
                 <div class="project-info">
-                    <h3>Interactive CV</h3>
-                    <p>Description of Project 2</p>
+                    <div>
+                        <h3>Interactive CV</h3>
+                        <p>Description of Project</p>
+                    </div>
                     <a href="https://cv-te4-intro.netlify.app/" target="_blank">View Project</a>
                 </div>
                 <div class="project-image">
@@ -107,8 +129,10 @@
             </div>
             <div class="project">
                 <div class="project-info">
-                    <h3>Pizza restaurant</h3>
-                    <p>Description of Project 2</p>
+                    <div>
+                        <h3>Pizza restaurant</h3>
+                        <p>Description of Project </p>
+                    </div>
                     <a href="https://timnilsson04.github.io/te4-pizzeria/" target="_blank">View Project</a>
                 </div>
                 <div class="project-image">
@@ -124,7 +148,5 @@
         </div>
     </footer>
 </body>
-
-
 
 </html>
