chore: Add new projects to index.html and update project images

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <header>
         <div class="header-container">
-            <h1 class="logo">My Portfolio</h1>
+            <a href="#hero" class="logo">My Portfolio</a>
             <nav class="nav-menu">
                 <ul>
                     <li><a href="#projects">Projects</a></li>
@@ -89,6 +89,30 @@
                     <img src="./img/weather-forecast.png" alt="Image 1">
                 </div>
             </div>
+            <div class="project">
+                <div class="project-info">
+                    <div>
+                        <h3>Interactive CV</h3>
+                        <p>Description of Project</p>
+                    </div>
+                    <a href="https://cv-te4-intro.netlify.app/" target="_blank">View Project</a>
+                </div>
+                <div class="project-image">
+                    <img src="./img/interactiveCV.png" alt="Image 1">
+                </div>
+            </div>
+            <div class="project">
+                <div class="project-info">
+                    <div>
+                        <h3>Pizza restaurant</h3>
+                        <p>Description of Project </p>
+                    </div>
+                    <a href="https://timnilsson04.github.io/te4-pizzeria/" target="_blank">View Project</a>
+                </div>
+                <div class="project-image">
+                    <img src="./img/pizza.png" alt="Image 1">
+                </div>
+            </div>
             <div class="projects-container">
                 <div class="project">
                     <div class="project-info">
@@ -118,25 +142,13 @@
             <div class="project">
                 <div class="project-info">
                     <div>
-                        <h3>Interactive CV</h3>
-                        <p>Description of Project</p>
-                    </div>
-                    <a href="https://cv-te4-intro.netlify.app/" target="_blank">View Project</a>
-                </div>
-                <div class="project-image">
-                    <img src="./img/interactiveCV.png" alt="Image 1">
-                </div>
-            </div>
-            <div class="project">
-                <div class="project-info">
-                    <div>
-                        <h3>Pizza restaurant</h3>
+                        <h3>Thesis project</h3>
                         <p>Description of Project </p>
                     </div>
-                    <a href="https://timnilsson04.github.io/te4-pizzeria/" target="_blank">View Project</a>
+                    <a href="Gymnasiearbete-2022-2023-Tim_Nilsson.pdf" target="_blank">View Project</a>
                 </div>
                 <div class="project-image">
-                    <img src="./img/pizza.png" alt="Image 1">
+                    <img src="./img/thesis-project.png" style="box-shadow: 0px 0px 3px black ;" alt="Image 1">
                 </div>
             </div>
         </div>
