chore: Add font-awesome stylesheet and update project section in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -38,7 +40,7 @@
     </header>
 
 
-    <section #projects id="projects">
+    <section id="projects">
         <div class="container">
             <h2>Projects</h2>
             <div class="project">
@@ -63,6 +65,18 @@
                 </div>
                 <div class="project-image">
                     <img src="./img/land-puzzle.png" alt="Project 2">
+                </div>
+            </div>
+            <div class="project">
+                <div class="project-info">
+                    <div>
+                        <h3>William Afton's nightmare</h3>
+                        <p>Description of Project </p>
+                    </div>
+                    <a href="https://william-aftons-nightmare.netlify.app/" target="_blank">View Project</a>
+                </div>
+                <div class="project-image">
+                    <img src="./img/fnafGame.png" alt="Image 1">
                 </div>
             </div>
             <div class="project">
@@ -154,9 +168,12 @@
         </div>
     </section>
 
-    <footer>
-        <div class="container">
+    <footer id="contact">
+        <div class="footer-container">
+            <a href="https://github.com/TimNilsson04" target="_blank" class="fa fa-github icons"></a>
             <p>&copy; 2024</p>
+            <a href="https://www.linkedin.com/in/tim-nilsson-402073263/" class="fa fa-linkedin-square icons"
+                target="_blank"></a>
         </div>
     </footer>
 </body>
