chore: Add new projects and update project links and images

--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
                         <h3>Clash of Läns</h3>
                         <p>Description of Project </p>
                     </div>
-                    <a href="http://respected-nice-cousin.glitch.me/" target="_blank">View Project</a>
+                    <div>
+                        <a href="http://respected-nice-cousin.glitch.me/" target="_blank">View Project</a>
+                        <a href="https://github.com/TE4-Umea/metria-praktik" target="_blank">View Github</a>
+                    </div>
                 </div>
                 <div class="project-image">
                     <img src="./img/clashoflans.png" alt="Project 1">
@@ -61,7 +64,10 @@
                         <h3>Land Puzzle</h3>
                         <p>Description of Project </p>
                     </div>
-                    <a href="https://land-puzzle.netlify.app/" target="_blank">View Project</a>
+                    <div>
+                        <a href="https://land-puzzle.netlify.app/" target="_blank">View Project</a>
+                        <a href="https://github.com/TE4-Umea/land-pussel" target="_blank">View Github</a>
+                    </div>
                 </div>
                 <div class="project-image">
                     <img src="./img/land-puzzle.png" alt="Project 2">
@@ -73,7 +79,10 @@
                         <h3>William Afton's nightmare</h3>
                         <p>Description of Project </p>
                     </div>
-                    <a href="https://william-aftons-nightmare.netlify.app/" target="_blank">View Project</a>
+                    <div>
+                        <a href="https://william-aftons-nightmare.netlify.app/" target="_blank">View Project</a>
+                        <a href="https://github.com/TimNilsson04/halloween-shooter-game" target="_blank">View Github</a>
+                    </div>
                 </div>
                 <div class="project-image">
                     <img src="./img/fnafGame.png" alt="Image 1">
@@ -85,7 +94,7 @@
                         <h3>Webb-shop project</h3>
                         <p>Description of Project </p>
                     </div>
-                    <a href="https://github.com/TimNilsson04/webb-shop-react" target="_blank">View Project</a>
+                    <a href="https://github.com/TimNilsson04/webb-shop-react" target="_blank">View Github</a>
                 </div>
                 <div class="project-image">
                     <img src="./img/Webb-Shop.png" alt="Image 1">
@@ -97,7 +106,10 @@
                         <h3>Weather Forecast</h3>
                         <p>Description of Project </p>
                     </div>
-                    <a href="https://darth-vader-the-sky-awakens.netlify.app/" target="_blank">View Project</a>
+                    <div>
+                        <a href="https://darth-vader-the-sky-awakens.netlify.app/" target="_blank">View Project</a>
+                        <a href="https://github.com/TimNilsson04/te4-darth-vader" target="_blank">View Github</a>
+                    </div>
                 </div>
                 <div class="project-image">
                     <img src="./img/weather-forecast.png" alt="Image 1">
@@ -106,22 +118,13 @@
             <div class="project">
                 <div class="project-info">
                     <div>
-                        <h3>Interactive CV</h3>
-                        <p>Description of Project</p>
-                    </div>
-                    <a href="https://cv-te4-intro.netlify.app/" target="_blank">View Project</a>
-                </div>
-                <div class="project-image">
-                    <img src="./img/interactiveCV.png" alt="Image 1">
-                </div>
-            </div>
-            <div class="project">
-                <div class="project-info">
-                    <div>
                         <h3>Pizza restaurant</h3>
                         <p>Description of Project </p>
                     </div>
-                    <a href="https://timnilsson04.github.io/te4-pizzeria/" target="_blank">View Project</a>
+                    <div>
+                        <a href="https://timnilsson04.github.io/te4-pizzeria/" target="_blank">View Project</a>
+                        <a href="https://github.com/TimNilsson04/te4-pizzeria" target="_blank">View Github</a>
+                    </div>
                 </div>
                 <div class="project-image">
                     <img src="./img/pizza.png" alt="Image 1">
@@ -134,7 +137,7 @@
                             <h3>FlipFlops website</h3>
                             <p>Description of FlipFlops website</p>
                         </div>
-                        <a href="https://flipflops.timpan.ninja/" target="_blank">View Project</a>
+                        <a href="https://flipflops.timpan.ninja/" target="_blank">View Github</a>
                     </div>
                     <div class="project-image">
                         <img src="./img/flipflops.png" alt="FlipFlops Website">
@@ -146,7 +149,7 @@
                             <h3>Sneakers website</h3>
                             <p>Description of Sneakers website</p>
                         </div>
-                        <a href="https://sneakers.timpan.ninja/" target="_blank">View Project</a>
+                        <a href="https://sneakers.timpan.ninja/" target="_blank">View Github</a>
                     </div>
                     <div class="project-image">
                         <img src="./img/sneakers.png" alt="Sneakers Website">
@@ -159,7 +162,7 @@
                         <h3>Thesis project</h3>
                         <p>Description of Project </p>
                     </div>
-                    <a href="Gymnasiearbete-2022-2023-Tim_Nilsson.pdf" target="_blank">View Project</a>
+                    <a href="Gymnasiearbete-2022-2023-Tim_Nilsson.pdf" target="_blank">View pdf</a>
                 </div>
                 <div class="project-image">
                     <img src="./img/thesis-project.png" style="box-shadow: 0px 0px 3px black ;" alt="Image 1">
@@ -177,5 +180,7 @@
         </div>
     </footer>
 </body>
+
+
 
 </html>
