chore: Update project link in index.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <p>Description of Project </p>
                     </div>
                     <div>
-                        <a href="https://land-puzzle.netlify.app/" target="_blank">View Project</a>
+                        <a href="http://nebulous-waiting-lunch.glitch.me/" target="_blank">View Project</a>
                         <a href="https://github.com/TE4-Umea/land-pussel" target="_blank">View Github</a>
                     </div>
                 </div>
