chore: Update project link and images in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-
     <section id="hero">
         <div class="container">
             <div class="hero-content">
@@ -19,7 +18,7 @@
                     <h2>Hello, I'm Tim Nilsson</h2>
                     <p>Welcome to my portfolio</p>
                 </div>
-                <div class="hero-image">
+                <div id="hero-image" class="hero-image">
                     <img src="./img/SkolFoto.jfif" alt="Your Image">
                 </div>
             </div>
@@ -55,7 +54,7 @@
                     </div>
                 </div>
                 <div class="project-image">
-                    <img src="./img/clashoflans.png" alt="Project 1">
+                    <img src="./img/clashoflans.png" alt="ClashofLans">
                 </div>
             </div>
             <div class="project">
@@ -70,7 +69,7 @@
                     </div>
                 </div>
                 <div class="project-image">
-                    <img src="./img/land-puzzle.png" alt="Project 2">
+                    <img src="./img/land-puzzle.png" alt="Land-Puzzle">
                 </div>
             </div>
             <div class="project">
@@ -85,7 +84,7 @@
                     </div>
                 </div>
                 <div class="project-image">
-                    <img src="./img/fnafGame.png" alt="Image 1">
+                    <img src="./img/fnafGame.png" alt="Fnaf">
                 </div>
             </div>
             <div class="project">
@@ -97,7 +96,7 @@
                     <a href="https://github.com/TimNilsson04/webb-shop-react" target="_blank">View Github</a>
                 </div>
                 <div class="project-image">
-                    <img src="./img/Webb-Shop.png" alt="Image 1">
+                    <img src="./img/Webb-Shop.png" alt="Webb-Shop">
                 </div>
             </div>
             <div class="project">
@@ -112,7 +111,7 @@
                     </div>
                 </div>
                 <div class="project-image">
-                    <img src="./img/weather-forecast.png" alt="Image 1">
+                    <img src="./img/weather-forecast.png" alt="Weather">
                 </div>
             </div>
             <div class="project">
@@ -127,7 +126,7 @@
                     </div>
                 </div>
                 <div class="project-image">
-                    <img src="./img/pizza.png" alt="Image 1">
+                    <img src="./img/pizza.png" alt="Pizza">
                 </div>
             </div>
             <div class="projects-container">
@@ -165,7 +164,7 @@
                     <a href="Gymnasiearbete-2022-2023-Tim_Nilsson.pdf" target="_blank">View pdf</a>
                 </div>
                 <div class="project-image">
-                    <img src="./img/thesis-project.png" style="box-shadow: 0px 0px 3px black ;" alt="Image 1">
+                    <img src="./img/thesis-project.png" style="box-shadow: 0px 0px 3px black ;" alt="GYARB">
                 </div>
             </div>
         </div>
@@ -179,8 +178,8 @@
                 target="_blank"></a>
         </div>
     </footer>
+
+    <script type="module" src="main.js"></script>
 </body>
-
-
 
 </html>
